--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,11 +8,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -25,14 +28,14 @@
     </nav>
     <div class="sidebar">
         <ul>
-          <li><a href="#" class="active-link">Rating Volunteer</a></li>
-          <li><a href="#">Rate Task</a></li>
-          <li><a href="#">Update Rating</a></li>
-          <li><a href="#">View Rating</a></li>
-          <li><a href="#">Remove Rating</a></li>
+            <li><a href="#" class="active-link">Rating Volunteer</a></li>
+            <li><a href="#">Rate Task</a></li>
+            <li><a href="#">Update Rating</a></li>
+            <li><a href="#">View Rating</a></li>
+            <li><a href="#">Remove Rating</a></li>
         </ul>
-      </div>
-      <div class="outer-container">
+    </div>
+    <div class="outer-container">
         <div class="main-content">
             <h3 style="margin-bottom: 30px;">Rating Volunteer</h3>
             <form>
@@ -61,4 +64,5 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
