--- a/home.html
+++ b/home.html
@@ -38,7 +38,8 @@
                     </li>
                 </ul>
             </div>
-            <button class="btn btn-primary" style="margin-right: 30px;">Login / Signup</button>
+            <button class="btn btn-primary" style="margin-right: 30px;"><a href="login.html" class="btn">Login / Signup</a></button>
+
         </div>
     </nav>
 
@@ -64,6 +65,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
