--- a/home.html
+++ b/home.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Community Volunteering Platform</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" >
+    <link rel="stylesheet" href="./home.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light shadow">
+    <nav class="navbar custom-navbar navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand d-flex align-items-center" href="#">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT6j95mDNtjlabAxUewbAcxvJnU9w4P7Iu0Og&s" alt="Logo" class="logoimg" style="width: 80px; height: 80px; border-radius: 10px;">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT6j95mDNtjlabAxUewbAcxvJnU9w4P7Iu0Og&s" alt="Logo" class="logoimg" style="width: 50px; height: 50px; border-radius: 10px;">
                 <span class="ms-2">Volunteer Platform</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,14 +36,25 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#" style="padding-right: 30px;">Filter</a>
                     </li>
+                    <li class="nav-item">
+                        <div class="dropdown">
+                            <button class="btn btn-success dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                              Login / Register
+                            </button>
+                            <ul class="dropdown-menu">
+                              <li><a class="dropdown-item" href="#">Volunteer</a></li>
+                              <li><a class="dropdown-item" href="#">Organisation</a></li>
+                            </ul>
+                          </div>
+                    </li>
                 </ul>
             </div>
-            <button class="btn btn-primary" style="margin-right: 30px;">Login / Signup</button>
-        </div>
+            </div>
+            
     </nav>
 
-    <main class="container my-5">
-        <div class="row align-items-center">
+    <main class="w-100">
+        <!-- <div class="row align-items-center">
             <div class="col-lg-6 text-start">
                 <h1 class="mb-4">Welcome to the Community Volunteering Platform</h1>
                 <p class="mb-4" style="font-size: 15px;">
@@ -56,7 +67,15 @@
             <div class="col-lg-6 text-center">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS3VYJTidF7riL_mfOzxf7I2VADOBEijMVGbg&s" alt="Community Volunteering" class="img-fluid rounded shadow">
             </div>
-        </div>
+        </div> -->
+        <div class="bg-image">
+            <div class="overlay"></div>
+            <div class="content headcontent">
+              <h1 class="display-6">Community Volunteering Platform</h1>
+              <p class="lead">Volunteer today to support meaningful causes, grow personally, and create a better tomorrow!</p>
+              <a href="#" class="btn btn btn-outline-info btn-lg">Join Community</a>
+            </div>
+          </div>
     </main>
 
     <footer class="bg-light text-center py-3">
