Modified Home Page

--- a/home.html
+++ b/home.html
@@ -42,8 +42,9 @@
                               Login / Register
                             </button>
                             <ul class="dropdown-menu">
-                              <li><a class="dropdown-item" href="#">Volunteer</a></li>
-                              <li><a class="dropdown-item" href="#">Organisation</a></li>
+                              <li><a class="dropdown-item" href="#">Volunteer login</a></li>
+                              <li><a class="dropdown-item" href="#">Organisation login</a></li>
+                              <li><a class="dropdown-item" href="#">Register</a></li>
                             </ul>
                           </div>
                     </li>
