--- a/organisationlogin.html
+++ b/organisationlogin.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Community Volunteering</title>
     <link rel="stylesheet" href="login.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="./home.css">
     <style>
         .form-container {
             display: none;
@@ -16,7 +19,27 @@
     </style>
 </head>
 <body>
-    <div class="container">
+    <nav class="navbar custom-navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <a class="navbar-brand d-flex align-items-center" href="#">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT6j95mDNtjlabAxUewbAcxvJnU9w4P7Iu0Og&s" alt="Logo" class="logoimg" style="width: 50px; height: 50px; border-radius: 10px;">
+                <span class="ms-2">Volunteer Platform</span>
+            </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto d-flex align-items-center gap-3">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="./home.html">Home</a>
+                        </li>
+                        </ul>
+                    
+                </div>
+        </div>
+
+    </nav>
+    <div class="container" style="margin-top: 10%;">
         <div id="login-form" class="form-container active">
             <h1>Welcome Back!</h1>
             <form action="#" method="POST">
@@ -28,54 +51,19 @@
                     <label for="password">Password</label>
                     <input type="password" id="password" name="password" placeholder="Enter your password" required>
                 </div>
-                <button type="submit" class="btn">organisation login</button>
+                <button type="submit" class="btn btn-primary">organisation login</button>
             </form>
-            <a href="#" onclick="showForm('register-form')" class="register-link">Don't have an account? Register here</a>
-        </div>
-
-
-        
-
-        <div id="register-form" class="form-container">
-            <h1>Create Your Account</h1>
-            <form action="#" method="POST">
-                <div class="form-group">
-                    <label for="name">Full Name</label>
-                    <input type="text" id="name" name="name" placeholder="Enter your full name" required>
-                </div>
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email" placeholder="Enter your email" required>
-                </div>
-                <div class="form-group">
-                    <label for="phone">Phone Number</label>
-                    <input type="tel" id="phone" name="phone" placeholder="Enter your phone number" required>
-                </div>
-                <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" id="password" name="password" placeholder="Enter a strong password" required>
-                </div>
-                <div class="form-group">
-                    <label for="role">Role</label>
-                    <select id="role" name="role" required>
-                        <option value="">Select your role</option>
-                        <option value="volunteer">Volunteer</option>
-                        <option value="organization">Organization</option>
-                    </select>
-                </div>
-                <button type="submit" class="btn">Register</button>
-            </form>
-            <a href="#" onclick="showForm('login-form')" class="register-link">Already have an account? Login here</a>
         </div>
     </div>
 
-    <script>
+    <!-- <script>
         function showForm(formId) {
             document.querySelectorAll('.form-container').forEach(form => {
                 form.classList.remove('active');
             });
             document.getElementById(formId).classList.add('active');
         }
-    </script>
+    </script> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
