--- a/register.html
+++ b/register.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Community Volunteering</title>
     <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="./home.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <style>
         .form-container {
             display: none;
@@ -16,8 +19,29 @@
     </style>
 </head>
 <body>
+    <nav class="navbar custom-navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <a class="navbar-brand d-flex align-items-center" href="#">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT6j95mDNtjlabAxUewbAcxvJnU9w4P7Iu0Og&s" alt="Logo" class="logoimg" style="width: 50px; height: 50px; border-radius: 10px;">
+                <span class="ms-2">Volunteer Platform</span>
+            </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto d-flex align-items-center gap-3">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="./home.html">Home</a>
+                        </li>
+
+                    </ul>
+                    
+                </div>
+        </div>
+
+    </nav>
     
-    <div class="container">
+    <div class="container" style="margin-top:30px">
     <div id="register-form" class="form-container active">
         <h1>Create Your Account</h1>
         <form action="#" method="POST">
@@ -45,7 +69,7 @@
                     <option value="organization">Organization</option>
                 </select>
             </div>
-            <button type="submit" class="btn">Register</button>
+            <button type="submit" class="btn btn-primary">Register</button>
         </form>
     </div>
 
@@ -58,5 +82,6 @@
             registerForm.classList.toggle('active');
         });
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
