--- a/volunteerlogin.html
+++ b/volunteerlogin.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Community Volunteering</title>
     <link rel="stylesheet" href="login.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="./home.css">
+
     <style>
         .form-container {
             display: none;
@@ -16,7 +20,26 @@
     </style>
 </head>
 <body>
-    <div class="container">
+    <nav class="navbar custom-navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <a class="navbar-brand d-flex align-items-center" href="#">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT6j95mDNtjlabAxUewbAcxvJnU9w4P7Iu0Og&s" alt="Logo" class="logoimg" style="width: 50px; height: 50px; border-radius: 10px;">
+                <span class="ms-2">Volunteer Platform</span>
+            </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto d-flex align-items-center gap-3">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="./home.html">Home</a>
+                        </li>
+                    </ul>
+                </div>
+        </div>
+
+    </nav>
+    <div class="container" style="margin-top: 10%;" >
         <div id="login-form" class="form-container active">
             <h1>Welcome Back!</h1>
             <form action="#" method="POST">
@@ -28,15 +51,14 @@
                     <label for="password">Password</label>
                     <input type="password" id="password" name="password" placeholder="Enter your password" required>
                 </div>
-                <button type="submit" class="btn">Volunteer login</button>
+                <button type="submit" class="btn btn-primary">Volunteer login</button>
             </form>
-            <a href="#" onclick="showForm('register-form')" class="register-link">Don't have an account? Register here</a>
         </div>
 
 
         
 
-        <div id="register-form" class="form-container">
+        <!-- <div id="register-form" class="form-container">
             <h1>Create Your Account</h1>
             <form action="#" method="POST">
                 <div class="form-group">
@@ -76,6 +98,8 @@
             });
             document.getElementById(formId).classList.add('active');
         }
-    </script>
+    </script> -->
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
