--- a/organisation/organisation-home.html
+++ b/organisation/organisation-home.html
@@ -29,10 +29,10 @@
                             <a class="nav-link" href="./Tasks.html">Tasks</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Rating</a>
+                            <a class="nav-link" href="./Rating.html">Rating</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" >Filter</a>
+                            <a class="nav-link" href="./search-filter.html" >Filter</a>
                         </li>
                         <li class="nav-item d-lg-none">
                             <div class="dropdown-center">
@@ -50,9 +50,9 @@
                     </ul>
                     
                 </div>
-                <div class="dropstart d-none d-lg-block">
-                    <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        <i class="bi bi-person-circle"></i>
+                <div class="dropdown-center d-none d-lg-block">
+                    <button class="btn dropdown-toggle btn-success" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Login/SignUp
                     </button>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="./volunteerlogin.html">Volunteer Login</a></li>
