--- a/organisation/my-tasks.html
+++ b/organisation/my-tasks.html
@@ -7,7 +7,7 @@
     <title>Community Volunteering Platform</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="./home.css">
+    <link rel="stylesheet" href="../volunteer/home.css">
 
     <style>
         .sub-navbar {
@@ -64,16 +64,13 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto d-flex align-items-center gap-3">
                         <li class="nav-item">
-                            <a class="nav-link active" href="./home.html">Home</a>
+                            <a class="nav-link active" href="./organisation-home.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./Tasks.html">Tasks</a>
+                            <a class="nav-link" href="./my-tasks.html">Tasks</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./Rating.html">Rating</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./search-filter.html" >Filter</a>
+                            <a class="nav-link" href="./taskRating.html">Rating</a>
                         </li>
                         <li class="nav-item d-lg-none">
                             <div class="dropdown-center">
@@ -81,9 +78,8 @@
                                     More
                                 </button>
                                 <ul class="dropdown-menu">
-                                  <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#userProfileModalLabel">Profile</a></li>
+                                  <li><a class="dropdown-item" href="#">Profile</a></li>
                                   <li><a class="dropdown-item" href="#">My Tasks</a></li>
-                                  <li><a class="dropdown-item" href="#"><button class="btn btn-danger">Logout</button></a></li>
                                 </ul>
                               </div>
                         </li>
@@ -91,18 +87,15 @@
                     </ul>
                     
                 </div>
-                <div class="dropstart d-none d-lg-block">
+                <div class="dropdown-center d-none d-lg-block">
                     <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        <i class="bi bi-person-circle"></i>
+                        More
                     </button>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#userProfileModalLabel">Profile</a></li>
-                        <li><a class="dropdown-item" href="#">My Tasks</a></li>
-                        <li><a class="dropdown-item" href="#"><button class="btn btn-danger">Logout</button></a></li>
+                        <li><a class="dropdown-item" href="#">Profile</a></li>
                     </ul>
                   </div>
-        </div>  
-      </div>      
+        </div>
 
     </nav>
 
@@ -160,16 +153,15 @@
             </div> -->
             <div class="tasks-area">
                 <div class="d-flex justify-content-between" style="flex:none;">
-                    <h5 class="display-6" style="padding: 10px; padding-top:0px;font-weight:bold; width:40%">All Tasks</h5>
-                    <div class="input-group mb-3" style="width: 40%; margin:10px">
-                        <input type="text" class="form-control" placeholder="Enter Task Name" aria-label="Enter task name" aria-describedby="button-addon2">
-                        <button class="btn btn-outline-primary" type="button" id="button-addon2">Search</button>
+                    <h5 class="display-6" style="padding: 10px; padding-top:0px;font-weight:bold; width:40%">My Tasks</h5>
+                    <div class="d-flex justify-content-end mb-3" style="width: 40%; margin:10px">
+                        <a class="btn btn-success" href="taskCreation.html">Create New Task</a>
                     </div>
                     
                 </div>
                 <div class="cards-area">
                     <div class="card " >
-                        <h5 class="card-header d-flex justify-content-between">Task Name<span class="badge text-bg-success">Not Taken</span></h5>
+                        <h5 class="card-header d-flex justify-content-between">Task Name<span><span class="badge text-bg-success">Not Taken</span>&nbsp;<button class="btn btn-danger">Delete</button></span></h5>
                         <div class="card-body d-flex">
                           <!-- <h5 class="card-title">Special title treatment</h5> -->
                            <div style="width: 94%;">
@@ -184,7 +176,7 @@
                               <div><strong>End Date:</strong> 20-01-2025</div>
                            </div>
                           <div class="d-flex flex-column" style="flex: none; gap :5px;"> 
-                            <span><a href="#" class="btn btn-primary">Sign Up</a></span>
+                            <span><a href="taskUpdation.html" class="btn btn-primary">Edit</a></span>
                             <button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#exampleModal">
                                 View
                             </button>
