--- a/organisation/organisation-home.html
+++ b/organisation/organisation-home.html
@@ -7,7 +7,7 @@
     <title>Community Volunteering Platform</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="./home.css">
+    <link rel="stylesheet" href="../volunteer/home.css">
 </head>
 
 <body>
@@ -23,16 +23,13 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto d-flex align-items-center gap-3">
                         <li class="nav-item">
-                            <a class="nav-link active" href="./home.html">Home</a>
+                            <a class="nav-link active" href="./organisation-home.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./Tasks.html">Tasks</a>
+                            <a class="nav-link" href="./my-tasks.html">Tasks</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./Rating.html">Rating</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./search-filter.html" >Filter</a>
+                            <a class="nav-link" href="./taskRating.html">Rating</a>
                         </li>
                         <li class="nav-item d-lg-none">
                             <div class="dropdown-center">
@@ -40,9 +37,8 @@
                                     More
                                 </button>
                                 <ul class="dropdown-menu">
-                                  <li><a class="dropdown-item" href="#">Volunteer Login</a></li>
-                                  <li><a class="dropdown-item" href="#">Organisation Login</a></li>
-                                    <li><a class="dropdown-item" href="#">Register</a></li>
+                                  <li><a class="dropdown-item" href="#">Profile</a></li>
+                                  <li><a class="dropdown-item" href="#">My Tasks</a></li>
                                 </ul>
                               </div>
                         </li>
@@ -51,13 +47,11 @@
                     
                 </div>
                 <div class="dropdown-center d-none d-lg-block">
-                    <button class="btn dropdown-toggle btn-success" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Login/SignUp
+                    <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        More
                     </button>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="./volunteerlogin.html">Volunteer Login</a></li>
-                        <li><a class="dropdown-item" href="./organisationlogin.html">Organisation Login</a></li>
-                        <li><a class="dropdown-item" href="./register.html">Register</a></li>
+                        <li><a class="dropdown-item" href="#">Profile</a></li>
                     </ul>
                   </div>
         </div>
