--- a/organisation/taskRating.html
+++ b/organisation/taskRating.html
@@ -6,6 +6,7 @@
     <title>Enhanced Rating Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="../volunteer/home.css">
     <style>
         body {
             background-color: #f8f9fa;
@@ -14,7 +15,7 @@
 
         .rating-page {
             max-width: 600px;
-            margin: 40px auto;
+            margin: 20px auto;
             padding: 20px;
             background-color: #ffffff;
             border: 1px solid #ddd;
@@ -71,6 +72,53 @@
     </style>
 </head>
 <body>
+    <nav class="navbar custom-navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <a class="navbar-brand d-flex align-items-center" href="#">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT6j95mDNtjlabAxUewbAcxvJnU9w4P7Iu0Og&s" alt="Logo" class="logoimg" style="width: 50px; height: 50px; border-radius: 10px;">
+                <span class="ms-2">Volunteer Platform</span>
+            </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto d-flex align-items-center gap-3">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="./organisation-home.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./my-tasks.html">Tasks</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./taskRating.html">Rating</a>
+                        </li>
+                        <li class="nav-item d-lg-none">
+                            <div class="dropdown-center">
+                                <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    More
+                                </button>
+                                <ul class="dropdown-menu">
+                                  <li><a class="dropdown-item" href="#">Profile</a></li>
+                                  <li><a class="dropdown-item" href="#">My Tasks</a></li>
+                                </ul>
+                              </div>
+                        </li>
+
+                    </ul>
+                    
+                </div>
+                <div class="dropdown-center d-none d-lg-block">
+                    <button class="btn dropdown-toggle " type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        More
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">Profile</a></li>
+                        <li><a class="dropdown-item" href="#">My Tasks</a></li>
+                    </ul>
+                  </div>
+        </div>
+
+    </nav>
     <div class="rating-page">
         <h1>Task Rating</h1>
         <form action="#" method="POST">
@@ -130,5 +178,7 @@
             });
         });
     </script>
+    <script src="./index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
