--- a/organisation/taskUpdation.html
+++ b/organisation/taskUpdation.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task Updation</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../volunteer/home.css">
     <style>
         main {
             min-height: 82vh;
@@ -58,10 +59,18 @@
                         <a class="nav-link" href="./Tasks.html">Tasks</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Rating</a>
+                        <a class="nav-link" href="taskRating.html">Rating</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Profile</a>
+                    <li class="nav-item d-lg-none">
+                        <div class="dropdown-center">
+                            <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                More
+                            </button>
+                            <ul class="dropdown-menu">
+                              <li><a class="dropdown-item" href="#">Profile</a></li>
+                              <li><a class="dropdown-item" href="#">My Tasks</a></li>
+                            </ul>
+                          </div>
                     </li>
                 </ul>
             </div>
