--- a/volunteer/home.html
+++ b/volunteer/home.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Community Volunteering Platform</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="./home.css">
 </head>
@@ -66,20 +67,52 @@
 
 
     <main class="w-100">
-        <!-- <div class="row align-items-center">
-            <div class="col-lg-6 text-start">
-                <h1 class="mb-4">Welcome to the Community Volunteering Platform</h1>
-                <p class="mb-4" style="font-size: 15px;">
-                    Join us in making a difference by connecting with volunteering opportunities in your community. Together, we can create a better tomorrow. Whether you're interested in environmental conservation, helping the elderly, or supporting education, there are countless ways you can contribute. By volunteering, you not only help others but also grow personally, develop new skills, and form meaningful connections with like-minded individuals. Start today and be the change you want to see in the world!
-                </p>
-                <p style="font-size: 15px;">Discover tasks that suit your skills, track your contributions, and become a part of a meaningful cause. Start your journey today!</p>
-
-                <button class="btn btn-primary" style="border: 1px solid white;">Get Started</button>
+            <div class="modal fade" tabindex="-1" id="userProfileModalLabel" aria-labelledby="userProfileModalLabel" aria-hidden="true">
+              <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title">My Profile</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    <form id="userProfileForm">
+                        <div class="input-group mb-3" style="width: 100%; margin: 10px;">
+                            <span class="input-group-text" style="width: 20%;">User ID</span>
+                            <input type="text" id="userId" class="form-control" readonly>
+                            <button class="btn btn-outline-secondary toggle-edit" type="button">Edit</button>
+                        </div>
+                        <!-- Name -->
+                        <div class="input-group mb-3" style="width: 100%; margin: 10px;">
+                            <span class="input-group-text" style="width: 20%;">Name</span>
+                            <input type="text" id="userName" class="form-control" readonly>
+                            <button class="btn btn-outline-secondary toggle-edit" type="button">Edit</button>
+                        </div>
+                        <!-- Email -->
+                        <div class="input-group mb-3" style="width: 100%; margin: 10px;">
+                            <span class="input-group-text" style="width: 20%;">Email</span>
+                            <input type="email" id="userEmail" class="form-control" readonly>
+                            <button class="btn btn-outline-secondary toggle-edit" type="button">Edit</button>
+                        </div>
+                        <!-- Phone -->
+                        <div class="input-group mb-3" style="width: 100%; margin: 10px;">
+                            <span class="input-group-text" style="width: 20%;">Phone</span>
+                            <input type="text" id="userPhone" class="form-control" readonly>
+                            <button class="btn btn-outline-secondary toggle-edit" type="button">Edit</button>
+                        </div>
+                        <!-- Role -->
+                        <div class="input-group mb-3" style="width: 100%; margin: 10px;">
+                            <span class="input-group-text" style="width: 20%;">Role</span>
+                            <input type="text" id="userRole" class="form-control" readonly>
+                            <button class="btn btn-outline-secondary toggle-edit" type="button">Edit</button>
+                        </div>
+                      </form>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="col-lg-6 text-center">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS3VYJTidF7riL_mfOzxf7I2VADOBEijMVGbg&s" alt="Community Volunteering" class="img-fluid rounded shadow">
-            </div>
-        </div> -->
         <div class="bg-image">
             <div class="overlay"></div>
             <div class="content headcontent">
@@ -95,6 +128,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./index.js"></script>
 
 </body>
 
